# autorotate

./: README.md  autorotate.cabal
app/: Main.hs
src/: Rotate.hs  Types.hs
