name:                autorotate
version:             0.1.0.1
synopsis:            Autorotate the screen
description:         Autorotates the screen based on monitor-sensor
homepage:            http://github.com/githubuser/autorotate#readme
license:             GPL-2
license-file:        LICENSE
author:              Gregory W. Schwartz
maintainer:          gregory.schwartz@drexel.edu
copyright:           2015 Gregory W. Schwartz
category:            Computer
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types
                     , Rotate
  build-depends:       base >= 4.7 && < 5
                     , process
                     , text
  default-language:    Haskell2010

executable autorotate
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , autorotate
                     , process
                     , text
                     , dbus
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/autorotate
